@@ -1,11 +1,17 @@
 Revision history {{$dist->name}}
 
 {{$NEXT}}
+	[FEATURES]
+	- added 'no_wide_chars' option to strip words with such characters
+	  from the output.  This may help spellcheckers that can't cope
+	  with UTF-8
 	[CHANGED]
 	- improved punctuation stripping algorithm for better word
 	  isolation (example C<< "hello". >> now is found as "hello")
 	- strips all word that do not have at least one \w character
 	  as a spellchecker isn't likely to do anything useful with them
+	[DOCUMENTED]
+	- added recommendations for dealing with character encoding
 
 1.09      2013-09-25
 	[FIXED]
